initial version, no spellcheck / typocheck

--- a/_posts/2009-11-04-happy-days-at-the-belvoir.textile
+++ b/_posts/2009-11-04-happy-days-at-the-belvoir.textile
@@ -1,13 +1,17 @@
 ---
 layout: post
-title: The hardest part of writing is &hellip;
+title: Happy Days by Sam Beckett At the Belvoir
 ---
-p(meta). At work, lunch break.
+p(meta). Starting writing inside the theatre, at intermission &hellip;
 
-How on earth do authors do it. I find it so hard to just write about something interesting frequently enough; And eloquently enough to be able to proudly put a little authors tag on the page. I guess this is a well known problem, hence the phrase <a href="http://en.wikipedia.org/wiki/Writer's_block">writer's block</a>. So what do people try to do against it? 
+Happy Days, by Samuel Beckett, promises to be an interesting play from the description. A woman, Winnie, is stuck in the mud for years on years, and is accompanied by the less stuck, but more feeble, Willie, her fella. Winnie has been there for a while, and doesn't know what to do. Sounds interesting right? add to the mix that Sam Beckett is the author, and its sounding good. I'm seeing the first preview, with the first paying audience, so your mileage may vary. 
 
-I recently read an inspiring memoir by Haruki Murakami, titled 'What I talk about when I talk about running' . Of course, as you'd expect, but really, how some of the same psychological forces are at play in other parts of his life. Most notably, <i>discipline</i>. Haruki knows that in order to run marathons, he must run a certain training distance every month; Thats OK. He claims to approach writing in the same way: To be disciplined, and to write, no matter what, between 9 and 2 every day. Thats it. 
+The set opens up spectacularly, with a circular curtain pulling aisde a mountain with our star, Winnie, sticking out of the middle. Plenty of light shines on her, and she awakens to the dawn of a new day. Nobody knows how long she's been there, nobody knows how long she will be, including her. All she knows is her habits, and a faint realisation that she is older than she was. Thoughts of eternities past, and eternities to come float through her mind, and the happiness of learning trivial things every day keep her somewhat sane. 
 
-Well, of course, thats not it, but the point is there. I think I'm going to do the same. So from now, expect a 15 minute effort per day in writing something, about something interesting. If you've got topics, then please. Although, it could be something else; I have another blog project coming up (very exciting!) and that could steal me a little. See? there goes the discipline. 
+Willie, her partner, who we don't see face on, grunts his way through the first act, going about his daily routine of reading a (who knows how old) daily paper. Theres lots of love, much like with any elderly couple, but willie is barely preset on stage. In other words, at least in the first act, Winnie is left to present an hour long monologue, stuck in the mud in the middle of the stage. Talk about a tough act when thats all you've can do. The script is also a bit slow, mostly because it's Winnie talking in a non continuous stream of thought. The pauses in the monologue are long, and let the audience think over the meaning. Combined with the lack of movement, though, and the play feels stifled. Theres no action, nothing to surprise the audience, and its all up to Winnie to keep the audience. 
 
-OK, 15 minutes. Every day. 1 month. Deal. 
+None of this is surprising; This is part of Sam Becketts absurd play period, and was really important in that movement in the 60s. Its interesting to see just from that perspective, and the lack of set change, movement or dialogue signals the minimalist approach that he was aiming for. The symbolism for a despair at capitalist government, and a broken climate are obvious too; Listening to the text, all these references, along with talk about religion, and a simple longing for younger and simpler days are all there. It's very clever, if you are there.
+
+Julie Forsyth plays Winnie, and does justice to the piece; The pauses, the thoughts, the character are all well presented. Her despair and futile hope are obvious in every sentence, and the way she talks about her husband, Willie, is with the best of affection. It's an excellent performance, and deserves to be applauded. 
+
+Ultimately, though, Happy Days doesn't work for me. The trouble is that theres no movement, no interplay between characters, save for some almost imaginary banter between the couple. The lack of movement makes it hard to concentrate, especially after a day at work, and I think the audience felt this way too. It's an incredible 2 hour monologue, but without a break, without interaction, it just lacks entertainment in the simple sense. Worth seeing if you want to see a true classic from Sam Beckett. 
