--- a/_posts/2009-11-04-happy-days-at-the-belvoir.textile
+++ b/_posts/2009-11-04-happy-days-at-the-belvoir.textile
@@ -2,7 +2,7 @@
 layout: post
 title: Happy Days by Sam Beckett At the Belvoir
 ---
-p(meta). Starting writing inside the theatre, at intermission &hellip;
+p(meta). Writing this on the train back from the Belvoir &hellip;
 
 Happy Days, by Samuel Beckett, promises to be an interesting play from the description. A woman, Winnie, is stuck in the mud for years on years, and is accompanied by the less stuck, but more feeble, Willie, her fella. Winnie has been there for a while, and doesn't know what to do. Sounds interesting right? add to the mix that Sam Beckett is the author, and its sounding good. I'm seeing the first preview, with the first paying audience, so your mileage may vary. 
 
