--- a/_posts/2009-11-22-bad-ideas-for-the-internet-day-one.textile
+++ b/_posts/2009-11-22-bad-ideas-for-the-internet-day-one.textile
@@ -1,17 +1,15 @@
 ---
 layout: post
-title: Happy Days by Sam Beckett At the Belvoir
+title: Bad ideas for the internet, number 1.
 ---
-p(meta). Writing this on the train back from the Belvoir &hellip;
+p(meta). At home, without internet &hellip; 
 
-Happy Days, by Samuel Beckett, promises to be an interesting play from the description. A woman, Winnie, is stuck in the mud for years on years, and is accompanied by the less stuck, but more feeble, Willie, her fella. Winnie has been there for a while, and doesn't know what to do. Sounds interesting right? add to the mix that Sam Beckett is the author, and its sounding good. I'm seeing the first preview, with the first paying audience, so your mileage may vary. 
+So i'm at my apartment and I don't have internet, so I decided to write about a horrible idea for the internet. There have been so many bad businesses out there, and so many that spectacularly failed in the bubble of 2000— remember <a href="http://www.pets.com">Pets.com</a>? I want to do one better. I want it unethical, and I want it bad. 
 
-The set opens up spectacularly, with a circular curtain pulling aside a mountain with our star, Winnie, sticking out of the middle. Plenty of light shines on her, and she awakens to the dawn of a new day. Nobody knows how long she's been there, nobody knows how long she will be, including her. All she knows is her habits, and a faint realisation that she is older than she was. Thoughts of eternities past, and eternities to come float through her mind, and the happiness of learning trivial things every day keep her somewhat sane. 
+The best unethical idea I've seen so far is <a href="http://www.darwindating.com">Darwin Dating</a>, a dating website where ugly people aren't allowed in. It's so bad, so mean, that people couldn't help laugh at the whole concept. I think it actually makes money. Wait, a bad idea that makes money? Damn. I need to get it worse. 
 
-Willie, her partner, who we don't see face on, grunts his way through the first act, going about his daily routine of reading a (who knows how old) daily paper. There's lots of love, much like with any elderly couple, but Willie is barely preset on stage. In other words, at least in the first act, Winnie is left to present an hour long monologue, stuck in the mud in the middle of the stage. Talk about a tough act when thats all you've can do. The script is also a bit slow, mostly because it's Winnie talking in a non continuous stream of thought. The pauses in the monologue are long, and let the audience think over the meaning. Combined with the lack of movement, though, and the play feels stifled. There's no action, nothing to surprise the audience, and its all up to Winnie to keep the audience. 
+How about, instead of that, a dating site with reviews? I think i'm on a winner here. You know when you go to amazon and theres the oh so helpful reviews of the book from former readers? well, why not the same thing on a dating site.
 
-None of this is surprising; This is part of Sam Becketts absurd play period, and was really important in that movement in the 60s. Its interesting to see just from that perspective, and the lack of set change, movement or dialogue signals the minimalist approach that he was aiming for. The symbolism for a despair at capitalist government, and a broken climate are obvious too; Listening to the text, all these references, along with talk about religion, and a simple longing for younger and simpler days are all there. It's very clever, if you are there.
+Say you look at a person, then you can review them "yeah, they weren't who they said they were going to be. They said they were 6'2, but really, they were more lik 5'7, and they took me out on a date to Harrys cafe de wheels." . The good reviews could be there too. 
 
-Julie Forsyth plays Winnie, and does justice to the piece; The pauses, the thoughts, the character are all well presented. Her despair and futile hope are obvious in every sentence, and the way she talks about her husband, Willie, is with the best of affection. It's an excellent performance, and deserves to be applauded. 
-
-Ultimately, though, Happy Days doesn't work for me. The trouble is that there's no movement, no interplay between characters, save for some almost imaginary banter between the couple. The lack of movement makes it hard to concentrate, especially after a day at work, and I think the audience felt this way too. It's an incredible 2 hour monologue, but without a break, without interaction, it just lacks entertainment in the simple sense. Worth seeing if you want to see a true classic from Sam Beckett. 
+Its so wrong. Its so blatantly bad. Do you think it could work? I'll come up with idea #2, something guaranteed to fail later.
