--- a/_posts/2009-11-22-bad-ideas-for-the-internet-day-one.textile
+++ b/_posts/2009-11-22-bad-ideas-for-the-internet-day-one.textile
@@ -10,6 +10,6 @@ The best unethical idea I've seen so far is <a href="http://www.darwindating.com
 
 How about, instead of that, a dating site with reviews? I think i'm on a winner here. You know when you go to amazon and theres the oh so helpful reviews of the book from former readers? well, why not the same thing on a dating site.
 
-Say you look at a person, then you can review them "yeah, they weren't who they said they were going to be. They said they were 6'2, but really, they were more lik 5'7, and they took me out on a date to Harrys cafe de wheels." . The good reviews could be there too. 
+Say you look at a person, then you can review them "yeah, they weren't who they said they were going to be. They said they were 6'2, but really, they were more like 5'7, and they took me out on a date to Harry's cafe de wheels." . The good reviews could be there too. 
 
 Its so wrong. Its so blatantly bad. Do you think it could work? I'll come up with idea #2, something guaranteed to fail later.
