--- a/_posts/2009-11-22-a-short-story-for-decisions.textile
+++ b/_posts/2009-11-22-a-short-story-for-decisions.textile
@@ -1,15 +1,17 @@
 ---
 layout: post
-title: Bad ideas for the internet, number 1.
+title: A short story adaptation
 ---
-p(meta). At home, without internet &hellip; 
+p(meta). Jean Luc Godard playing in front of me.
 
-So i'm at my apartment and I don't have internet, so I decided to write about a horrible idea for the internet. There have been so many bad businesses out there, and so many that spectacularly failed in the bubble of 2000— remember <a href="http://www.pets.com">Pets.com</a>? I want to do one better. I want it unethical, and I want it bad. 
+This is a short story adaptation from a film. I'll change it as I go. 
 
-The best unethical idea I've seen so far is <a href="http://www.darwindating.com">Darwin Dating</a>, a dating website where ugly people aren't allowed in. It's so bad, so mean, that people couldn't help laugh at the whole concept. I think it actually makes money. Wait, a bad idea that makes money? Damn. I need to get it worse. 
+A young woman, Maggie, is in love with 2 men. She's been seeing them for about 3 or 4 months each, and loves seeing them both. Neither has found out about the other guy, mostly because she's meticulous. Maggie starts feeling a bit lonely one night, and realises that she wants to keep the one she loves the most. She decides to put up a test. She decides to send an email to her two guys, telling them she loves them, and asking them to move in with her. The first one to respond gets to move in, and the second, well, &hellip; 
 
-How about, instead of that, a dating site with reviews? I think i'm on a winner here. You know when you go to amazon and theres the oh so helpful reviews of the book from former readers? well, why not the same thing on a dating site.
+She sends her emails out to her two fellows, pretty much telilng them why she loves them, and asking them to move in to her Surry Hils studio with her. As she's settling down to watch TV, a horrible feeling comes into her stomach; She realises that she's sent the email she'd meant for Neil to Michael instead, and Vice versa. As quick as she can move, she puts on a pair of slippers, and runs out to Central station, realising what a mistake she's made, and hopping on the first train to Neils place. 
 
-Say you look at a person, then you can review them "yeah, they weren't who they said they were going to be. They said they were 6'2, but really, they were more like 5'7, and they took me out on a date to Harry's cafe de wheels." . The good reviews could be there too. 
+She gets to his house by midnight, sweaty from the walk, waking him up from an early nights sleep; As she comes in, she tells him not to look at his email in the morning, and confesses everything. She tells him she's been seeing another man, that she's been unfaithful, but that he's the one that she really loves. Without a word, Neil opens the door, and with the slightest of eye movements, shows her out of his place, closing the door quietly after her. Maggie is completely devestated, but knows that she can still save hr live with Michael. 
 
-Its so wrong. Its so blatantly bad. Do you think it could work? I'll come up with idea #2, something guaranteed to fail later.
+She catches the last train to Bondi Junction at 2am, walks over to his apartment block, and camps out there, trying not to cry as she waits through the whole night. At 7am, she goes to the nearest cafe, grabs 2 cofees, and rings Michaels bell. She asks him if he's checked his email, says he has, and grabs his latte eagerly, kissing her and giving her a hug while waking up. She asks him if hs still loves her, and says of course. breaking down, she tells him whats happened, leaving out the small detail of having been to Neils home first. Without any words, he pushes her hand away, sheds a tear, and opens the door, while asking her to leave. 
+
+Confused, back in her apartment, Maggie looks at her emails, opening the sent mail folders; She sees that she hadn't messed up the destination addresses at all, and had sent the right letter to the right guy after all. 
