Save a written post.

--- a/_posts/2009-11-28-pencils-hold-up-ikea.textile
+++ b/_posts/2009-11-28-pencils-hold-up-ikea.textile
@@ -1,17 +1,11 @@
 ---
 layout: post
-title: A short story adaptation
+title: One of those little things I see, and I don't want to forget.
 ---
-p(meta). Jean Luc Godard playing in front of me.
+p(meta). Hot, in my apartment
 
-This is a short story adaptation from a film. I'll change it as I go. 
+One of the local cafés near me has that whole recycled furniture things going on, Apart from being a really great café with good food. I sat in one day and picked up a book from their bookshelf.
 
-A young woman, Maggie, is in love with 2 men. She's been seeing them for about 3 or 4 months each, and loves seeing them both. Neither has found out about the other guy, mostly because she's meticulous. Maggie starts feeling a bit lonely one night, and realises that she wants to keep the one she loves the most. She decides to put up a test. She decides to send an email to her two guys, telling them she loves them, and asking them to move in with her. The first one to respond gets to move in, and the second, well, &hellip; 
+The book was a big italian cookbook, <a href="http://www.amazon.com/Silver-Spoon-Phaidon-Press/dp/0714845310">The Silver Spoon</a>, which was already a bit out there for books you'd find whilst having your coffee, and the bookshelf was an old <a href="http://www.ikea.com/us/en/catalog/products/83688210">Ikea Billy</a> bookshelf. 
 
-She sends her emails out to her two fellows, pretty much telilng them why she loves them, and asking them to move in to her Surry Hils studio with her. As she's settling down to watch TV, a horrible feeling comes into her stomach; She realises that she's sent the email she'd meant for Neil to Michael instead, and Vice versa. As quick as she can move, she puts on a pair of slippers, and runs out to Central station, realising what a mistake she's made, and hopping on the first train to Neils place. 
-
-She gets to his house by midnight, sweaty from the walk, waking him up from an early nights sleep; As she comes in, she tells him not to look at his email in the morning, and confesses everything. She tells him she's been seeing another man, that she's been unfaithful, but that he's the one that she really loves. Without a word, Neil opens the door, and with the slightest of eye movements, shows her out of his place, closing the door quietly after her. Maggie is completely devestated, but knows that she can still save hr live with Michael. 
-
-She catches the last train to Bondi Junction at 2am, walks over to his apartment block, and camps out there, trying not to cry as she waits through the whole night. At 7am, she goes to the nearest cafe, grabs 2 cofees, and rings Michaels bell. She asks him if he's checked his email, says he has, and grabs his latte eagerly, kissing her and giving her a hug while waking up. She asks him if hs still loves her, and says of course. breaking down, she tells him whats happened, leaving out the small detail of having been to Neils home first. Without any words, he pushes her hand away, sheds a tear, and opens the door, while asking her to leave. 
-
-Confused, back in her apartment, Maggie looks at her emails, opening the sent mail folders; She sees that she hadn't messed up the destination addresses at all, and had sent the right letter to the right guy after all. 
+I just noticed, after a while, that they had lost the little knoblets that hold an the shelves up. So, for each shelf, they broke a pencil in 4, and used them as the knobs. It looked fun, and worked. It even looked like they gave more support than the original knobs were meant to.  
