--- a/_posts/2010-03-05-that-face-belvoir-from-the-royal-court-theatre.textile
+++ b/_posts/2010-03-05-that-face-belvoir-from-the-royal-court-theatre.textile
@@ -1,11 +1,5 @@
 ---
 layout: post
-title: One of those little things I see, and I don't want to forget.
+title: Review of The Belvoir St Theatres production of That Face (from the Royal Court)
 ---
-p(meta). Hot, in my apartment
-
-One of the local cafés near me has that whole recycled furniture things going on, Apart from being a really great café with good food. I sat in one day and picked up a book from their bookshelf.
-
-The book was a big italian cookbook, <a href="http://www.amazon.com/Silver-Spoon-Phaidon-Press/dp/0714845310">The Silver Spoon</a>, which was already a bit out there for books you'd find whilst having your coffee, and the bookshelf was an old <a href="http://www.ikea.com/us/en/catalog/products/83688210">Ikea Billy</a> bookshelf. 
-
-I just noticed, after a while, that they had lost the little knoblets that hold an the shelves up. So, for each shelf, they broke a pencil in 4, and used them as the knobs. It looked fun, and worked. It even looked like they gave more support than the original knobs were meant to.  
+p(meta). 
