spell check the file.

--- a/_posts/2010-03-05-that-face-belvoir-from-the-royal-court-theatre.textile
+++ b/_posts/2010-03-05-that-face-belvoir-from-the-royal-court-theatre.textile
@@ -6,19 +6,19 @@ p(meta). March, and it's rainy.
 
 Last week I saw the Belvoir St Theatres production of <i>That Face</i>; I didn't know much before buying the tickets, other than the seeming miracle of the plays existence. 
 
-Polly Stenham wrote the play and then the Royal Court took it and put it on in 2007, and here we are in 2010 seeing an australian production. Nothing really that amazing, except that Polly Stenham was 19 when she wrote this piece - and thats pretty darned remarkable, especially for the Belvoir, where I've seen things like Eugene Ionesco's <a href="http://en.wikipedia.org/wiki/Exit_the_King">Exit The King</a> starring Geoffrey Rush. So theres, something to live up to. 
+Polly Stenham wrote the play and then the Royal Court took it and put it on in 2007, and here we are in 2010 seeing an Australian production. Nothing really that amazing, except that Polly Stenham was 19 when she wrote this piece - and thats pretty darned remarkable, especially for the Belvoir, where I've seen things like Eugene Ionescos <a href="http://en.wikipedia.org/wiki/Exit_the_King">Exit The King</a> starring Geoffrey Rush. So there's definitely something to live up to.
 
 The play focuses on a broken family, with 4 characters all living alone, with their own personal struggles. All 4 are fully fleshed, and struggle to deal with their families and their own decisions, which is exactly what the play is about. 
 
 We meet the daughter of the family first, Mia, a girl out at boarding school. She's a troublemaker, and when she gets in trouble, she really has one person to talk to, her brother. 
 
-The play really is about the twisted relationship between mother and son, Marthan and Henry, who we see waking up, hungover, half naked, in bed. The audience is wondering. Martha is a seemingly broken woman, an alcoholic, not quite with it enough to take care of the family, but still smart enough to manipulate and twist her family around her.
+The play really is about the twisted relationship between mother and son, Martha and Henry, who we see waking up, hung over, half naked, in bed. The audience is wondering. Martha is a seemingly broken woman, an alcoholic, not quite with it enough to take care of the family, but still smart enough to manipulate and twist her family around her.
 
-Mia ust wants some sanity, clarity in her life, and tries to pull Henry around, while he, desperately, devoted, still tries to get his mother on the straight and narrow. Hugh, their father, remarried and living overseas, comes home to try and patch things up, and finds a more insane situation at home than otherwise, not realising that his family thinks he has abandoned them.
+Mia just wants some sanity, clarity in her life, and tries to pull Henry around, while he, desperately, devoted, still tries to get his mother on the straight and narrow. Hugh, their father, remarried and living overseas, comes home to try and patch things up, and finds a more insane situation at home than otherwise, not realising that his family thinks he has abandoned them.
 
 The great thing is just how gripping the stories of all four of them are. Every one in the family is terribly flawed in their own way, and we feel for their struggles in their lives, and it's great to see the broken interaction between mothers and sons, sisters and brothers, and the modern 21st century divorced parents. I guess the quote that comes to mind is, obviously, <blockquote>Happy families are all alike; every unhappy family is unhappy in its own way.&mdash;Leo Tolstoy</blockquote>. 
 
-It's a remarkebly vivid play, very honest, with great modern dialogue. Worth watching, and I can understand why the Belvoir production is sold out. The production at the belvoir is great, with the notable inexperience of the younger cast members showing at points, but not detracting from the overall experience. I'll be watching out for Pollys next play.
+It's a remarkably vivid play, very honest, with great modern dialogue. Worth watching, and I can understand why the Belvoir production is sold out. The production at the Belvoir is great, with the notable inexperience of the younger cast members showing at points, but not detracting from the overall experience. I'll be watching out for Pollys next play.
 
 
 
