--- a/_posts/2011-10-16-finest-hiking-memories.textile
+++ b/_posts/2011-10-16-finest-hiking-memories.textile
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Bengal Tiger at the Baghdad Zoo - A broadway review.
+title: Hiking in Utah, the real formative memories.
 ---
 A couple of years ago, my friend Jim and I went hiking in Utah and Arizona. This was undoubtable some of the finest hiking i've done in my life: we made an impromptu decision to walk to the bottom of the grand canyon, and back, and many other hikes through more water, mud, dirt, and whatnot that you could imagine. 
 
