--- a/_posts/2012-07-26-uncle-vanya-sydney-theatre-company.textile
+++ b/_posts/2012-07-26-uncle-vanya-sydney-theatre-company.textile
@@ -3,3 +3,18 @@ layout: post
 title: Uncle Vanya, a Sydney Theatre Company production, in New York!
 ---
 
+The Sydney Theatre Company has a short history of putting on plays, seeing that they're really really popular, and then having them tour around the world. Typically, they also star Cate Blanchett. The first was 2009's "A Streetcar Named Desire", and this time it is "Uncle Vanya". 
+
+This is no typical production, though. Cate Blanchett's husband adapts the play to a slightly more modern era, and the behind the scenes staff is a bit of a whos-who of <em>Hungarian</em> theatre. It seems like director <a href="http://aschertamas.com/">Tamás Ascher</a> hired a number of other prominent hungarian theatre folks to do costume and set building. The whole production felt a little unusual for Australian big theatre. Things moved a little more slowly, characters walk onto stage a little bit more deliberately, and the set is nice and barren.
+
+Uncle Vanya takes place in a country estate of a long absent lord, who comes to stay with his new, much younger and very beautiful new second wife. The lord is clearly not suited for country life, and makes everyones life a misery in the house, while love and passions are ignited underneath between some of the younger folk. The question, throughout the play, is whos love will go requited, and who's wont. Ultimately, this is Chekhov, though, and the focus is portraying people, not happy endings.
+
+The cast in Uncle Vanya is a who's who of Australian Theatre. Vanya is portrayed as a deeply troubled, loving and lonely man by <a href="http://www.imdb.com/name/nm0746896/">Richard Roxburgh</a>, who loves Yelena in a great childish manner. The focus of the production is just how irrational, silly and unrequited love can be. Every man loves Yelena, played convincingly by <a href="http://www.imdb.com/name/nm0000949/">Cate Blanchett</a>, and for silly reasons.
+
+That's part of the play, the beauty of this proudction is how simple, human and accessible every character is. All the actors speak in a regular Australian accent, with <a href="http://www.imdb.com/name/nm0915865/">Jacki Weaver</a> playing up a provincial, classic Australian accent to fit in well as the housemaid and nanny in the old country manor. <A href="www.imdb.com/name/nm0915989/">Hugo Weaving</a> portrays the dr, who comes to visit the house to sate his own failed love life, is a friend and accidental competitor to Vanya. The two share their feelings of failed love, and how they feel their lives passing through their hands, in a really beautiful and plain way. 
+
+All the characters make you feel for their suffering. That's the key of the play, in many ways; Everyone has a hard life, and loves their lot just the same. Without spoiling the action, the retired professor loses his charm on all his servants and family, and every painful moment comes to the fore, for every character. It's heart wrenching, and in this performance, really funny, because you feel empathy with every character. 
+
+Cate Blanchett gets drunk with Sonya, played by <a href="http://www.imdb.com/name/nm0568399/">Hayley Mcelhinney</a>, and the two portray a funny beautiful way of what it's like to love, dislike and have a complex relationship with someone, all in the space of 5 minutes. More importantly, we still get to feel how <i>russian</i> the play is. There's a disdain and class based system against the peasants, a love for the motherland, and a distinction between the city and country lives of the citizens; One can imagine what russian audiences think, and thought of this play when it came out. Chekhovs portrayal, and understanding of women comes out in this scene.
+
+If you can manage to see this production, do it. You'll feel attached to everyone in the play, and if you don't know the plot, feel and understand humanity in a way you may not have before.
