--- a/_posts/2012-07-29-less-is-more-in-code.textile
+++ b/_posts/2012-07-29-less-is-more-in-code.textile
@@ -7,23 +7,16 @@ p(meta). Feb 10 2009
 
 Recently, Rob Pike wrote a little bit of history of Go, talking about how <a href="http://commandcenter.blogspot.com/2012/06/less-is-exponentially-more.html">Less is <em>exponentially</em> more.</a>. I've gone through learning Ruby in the last few weeks, and I want to give a minute exmaple of just how true this is, and compare Go (or, frankly, many other languages) to Ruby, and how Less is More. 
 
-Consider the barest, simplest control structure in Software Developement, the <em>if</em> statement. Lets think about this in C++, where we often write something like the following
-{%highlight java linenos %}
-public void b() {
-  
-}
-public void doStuff(boolean a) {
+Consider the barest, simplest control structure in Software Developement, the <em>if</em> statement. Lets think about this in C++, where we often write something like the following:
+{% highlight java linenos %}
 if (a) {
   b();
 }
-// Or the following abbreviation, without the { }
-if (a) { b(); }
-// Or if we wanted to be really silly, 
+// Or, the flip side
 if (!a) {
-  // Do nothing!
+  // Do nothing
 } else {
   b();
-}
 }
 {% endhighlight %}
 So for a little while now, i've been encouraging people in the team to always use Double Checked Locking in java. Whats that you may ask? Well, in Java, getting a synchronized lock on things can be slow. A lot of code, including code in <code>java.util.*</code> has points like this: 
